--- a/css/main.css
+++ b/css/main.css
@@ -31,30 +31,30 @@ a {
 }
 
 #sidedrawer {
-  left: 0;
+    left: 0;
 }
 
 
 #header, #sidedrawer {
-  transition: left .2s;
+    transition: left .2s;
 }
 #sidedrawer {
-  bottom: 0;
-  width: 200px;
-  left: -200px;
-  overflow: auto;
-  background-color: #FFF;
+    bottom: 0;
+    width: 200px;
+    left: -200px;
+    overflow: auto;
+    background-color: #FFF;
 }
 header, #sidedrawer {
-  z-index: 2;
-  transition: left .2s;
-  position: fixed;
-  top: 0;
+    z-index: 2;
+    transition: left .2s;
+    position: fixed;
+    top: 0;
 }
 #appbar-sidenav-hide, #appbar-sidenav-show {
-  position: relative;
-  left: -2px;
-  margin-right: 18px;
+    position: relative;
+    left: -2px;
+    margin-right: 18px;
 }
 
 
@@ -74,9 +74,9 @@ header, #sidedrawer {
 }
 
 #appbar .icon-keyboard-arrow-right {
-  font-size: 20px;
-  position: relative;
-  top: 1px;
+    font-size: 20px;
+    position: relative;
+    top: 1px;
 }
 
 #appbar-more-vert, #appbar-sidenav-hide, #appbar-sidenav-show {
@@ -132,4 +132,89 @@ header, #sidedrawer {
     opacity: 1;
     transition: 0.5s;
     pointer-events: auto;
+}
+
+
+/*---------------------------
+        SETTINGS Page
+----------------------------*/
+
+.single-product{
+    z-index: 100;
+}
+
+.overlay{
+    /*height: 20px;*/
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #282b2c;
+    /*transition: 0.6s;*/
+    z-index: 100;
+}
+
+.single-product.visible .overlay{
+    height: 100%;
+}
+
+.preview-large{
+    box-sizing: border-box;
+    width: 760px;
+    height: 550px;
+    position: fixed;
+    left: 50%;
+    margin-left: -375px;
+    top: 50%;
+    margin-top: -275px;
+    pointer-events: none;
+
+    border-radius: 6px;
+    background-color:  #ffffff;
+
+    z-index: 102;
+    opacity: 0;
+    transition: 0.4s;
+
+}
+
+.single-product.visible .preview-large{
+    opacity: 1;
+    /*transition: 1.4s;*/
+    pointer-events: auto;
+}
+
+.preview-large h3{
+    margin-top: 20px;
+}
+
+.preview-large img{
+    width: 100%;
+    height: 280px;
+    border-bottom: 3px solid #efefef;
+    border-radius: 5px 5px 0 0;
+}
+
+.preview-large p{
+    line-height: 23px;
+    padding: 50px 45px;
+}
+
+.close-settings{
+    position: absolute;
+    right: 25px;
+    top: 15px;
+
+    font-size: 28px;
+    color: #555;
+    cursor: pointer;
+}
+
+.preview-large h3{
+    margin-top: 20px;
+    font: normal 24px 'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 28px;
+    color: #5A96B9;
+    padding-bottom: 20px;
+    text-align: center;
 }
